# ec

./: README  configure.ac
include/: Makefile.am
include/ec/: ec.h
include/ec/static/: ec.h
src/: Makefile.am  ec.c
test/: Makefile.am
test/benchmark/: Makefile.am  size.c  speed.c
test/check/: Makefile.am  shadow.c  thread.c  try.c  volatile.c  with.c
test/example/: Makefile.am  try.c  with.c
